# pyinvoice

./: .gitignore  .hgignore  LICENSE.txt  README.md  README.txt  babel.cfg  generate_invoice.py  pyinvoice.spec  required packages.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
i18n-tools/: compile  extract  update
invoicegenerator/: config.py
invoicegenerator/generator/rml/: lib_rml2pdf.py  rg.rml  rmlgenerator.py
invoicegenerator/generator/rml/fonts/: Quellen.txt
invoicegenerator/generator/rml/tests/: rmlgenerator_test.py
invoicegenerator/model/: address.py  invoice.py  invoice_item.py
invoicegenerator/model/tests/: test_address.py  test_invoice.py  test_invoiceitem.py
invoicegenerator/parser/lxml/: addressparser.py  invoiceitemparser.py  invoiceparser.py
invoicegenerator/parser/lxml/tests/: test_addressparser.py  test_invoiceitemparser.py  test_invoiceparser.py
invoicegenerator/tests/: test_config.py
invoicegenerator/xmlschema/: Invoice.xsd  invoice_document.xsd
lib/pyPdf/: pdf.py
locale/: pyinvoice.pot
locale/de/LC_MESSAGES/: pyinvoice.mo  pyinvoice.po
locale/en/LC_MESSAGES/: pyinvoice.mo  pyinvoice.po
scripts/: pyinvoice
src/schwarz/pyinvoice/: check.py  cli.py  config.py  pdf_generator.py  templating.py
src/schwarz/pyinvoice/model/: __init__.py  address.py  invoice.py  invoice_item.py
src/schwarz/pyinvoice/parser/: __init__.py  addressparser.py  invoiceitemparser.py  invoiceparser.py
src/schwarz/pyinvoice/tests/: templated_text_test.py
userdata/: invoicing_data.conf
(+7 files in other folders)
