[metadata]
name          = pyinvoice
version       = file: VERSION.txt
description   = cli script to generate PDF invoices from custom XML files

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/pyinvoice
license       = MIT
license_file  = LICENSE.txt

classifiers =
    Development Status :: 2 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Code = https://github.com/FelixSchwarz/pyinvoice
    Issue tracker = https://github.com/FelixSchwarz/pyinvoice/issues


[options]
# only Python 3.10+ are actually tested
python_requires = >= 3.8

package_dir =
    = src
packages = find:
namespace_packages = schwarz
zip_safe = true
include_package_data = true
scripts =
    scripts/pyinvoice

install_requires =
    docopt
    babel
    jinja2
    lxml


